--- a/app/src/main/res/layout/activity_mainscreen.xml
+++ b/app/src/main/res/layout/activity_mainscreen.xml
@@ -16,17 +16,32 @@
         android:layout_weight="1"
         android:onClick="onLogoutButtonClicked"
         android:text="logout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/shelter_listview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/searchShelterButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/searchShelterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onSearchViewButtonClicked"
+        android:text="Search Shelters"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/shelter_listview"
         android:layout_width="368dp"
         android:layout_height="439dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="67dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchShelterButton" />
 </android.support.constraint.ConstraintLayout>
