--- a/app/src/main/res/layout/content_shelter_search.xml
+++ b/app/src/main/res/layout/content_shelter_search.xml
@@ -13,13 +13,13 @@
         android:layout_width="69dp"
         android:layout_height="28dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Gender"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/genderButtonGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -31,11 +31,12 @@
         android:id="@+id/genderButtonGroup"
         android:layout_width="339dp"
         android:layout_height="77dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="54dp" >
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/genderMale"
@@ -64,23 +65,25 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Age Range"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genderButtonGroup" />
+        app:layout_constraintBottom_toTopOf="@+id/ageRangeButtonGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/ageRangeButtonGroup"
         android:layout_width="360dp"
         android:layout_height="120dp"
+        android:layout_marginBottom="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genderButtonGroup">
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/ageRangeFamWithNewborns"
@@ -114,18 +117,23 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_width="284dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/searchbutton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="318dp">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <EditText
+            android:id="@+id/shelterSearchNameFilterID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="name" />
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Shelter Name"
+            android:inputType="textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -135,10 +143,9 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:onClick="onSearchButtonClicked"
         android:text="Search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
