--- a/app/src/main/res/layout/content_shelter_search.xml
+++ b/app/src/main/res/layout/content_shelter_search.xml
@@ -39,14 +39,14 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
-            android:id="@+id/genderMale"
+            android:id="@+id/genderMen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Male" />
 
         <RadioButton
-            android:id="@+id/genderFemale"
+            android:id="@+id/genderWomen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
