-Made shelter spots reservable by users -Fixed some issues with the database -Added relevant buttons to enable spot reservation/relinquishing -Made User view functional

--- a/app/src/main/res/layout/activity_shelter_detail_view.xml
+++ b/app/src/main/res/layout/activity_shelter_detail_view.xml
@@ -31,10 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="350dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/resNum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,13 +61,14 @@
 
     <EditText
         android:id="@+id/resNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="49dp"
         android:layout_marginBottom="6dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         app:layout_constraintBottom_toTopOf="@+id/buttonReserve"
+        app:layout_constraintEnd_toEndOf="@+id/buttonReserve"
         app:layout_constraintStart_toStartOf="@+id/buttonReserve" />
 
 </android.support.constraint.ConstraintLayout>
