--- a/app/src/main/res/layout/content_shelter_search.xml
+++ b/app/src/main/res/layout/content_shelter_search.xml
@@ -15,17 +15,21 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Gender"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/genderButtonGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!--
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="53dp" />
+    -->
 
     <RadioGroup
         android:id="@+id/genderButtonGroup"
