--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.697"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="text" />
 
     <TextView
         android:id="@+id/name"
@@ -62,7 +63,8 @@
         app:layout_constraintEnd_toEndOf="@+id/regname"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/regname"
-        app:layout_constraintTop_toBottomOf="@+id/regname" />
+        app:layout_constraintTop_toBottomOf="@+id/regname"
+        android:inputType="text" />
 
     <TextView
         android:id="@+id/password"
@@ -90,7 +92,8 @@
         app:layout_constraintEnd_toEndOf="@+id/regname"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/regname"
-        app:layout_constraintTop_toBottomOf="@+id/regname" />
+        app:layout_constraintTop_toBottomOf="@+id/regname"
+        android:inputType="textPassword" />
 
     <Spinner
         android:id="@+id/AccountSpinner"
