--- a/app/src/main/res/layout/content_user_view.xml
+++ b/app/src/main/res/layout/content_user_view.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.team38.UserView"
-    tools:showIn="@layout/activity_user_view">
+    tools:showIn="@layout/activity_user_view"
+    tools:keep="@layout/content_user_view">
 
     <TextView
         android:id="@+id/UserInfoBox"
