--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,7 +32,8 @@
         app:layout_constraintEnd_toStartOf="@+id/regname"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/regname" />
+        app:layout_constraintTop_toTopOf="@+id/regname"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/userID"
@@ -48,7 +50,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toTopOf="@+id/regID"
-        app:layout_constraintVertical_bias="0.167" />
+        app:layout_constraintVertical_bias="0.167"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/regID"
@@ -79,7 +82,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toTopOf="@+id/regPassword"
-        app:layout_constraintVertical_bias="0.394" />
+        app:layout_constraintVertical_bias="0.394"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/regPassword"
@@ -115,7 +119,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/AccountSpinner"
         app:layout_constraintEnd_toStartOf="@+id/AccountSpinner"
         app:layout_constraintTop_toTopOf="@+id/AccountSpinner"
-        app:layout_constraintVertical_bias="0.583" />
+        app:layout_constraintVertical_bias="0.583"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/buttonReg"
@@ -132,7 +137,8 @@
         app:layout_constraintHorizontal_bias="0.64"
         app:layout_constraintStart_toStartOf="@+id/buttonCancel"
         app:layout_constraintTop_toBottomOf="@+id/AccountSpinner"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.072"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/buttonCancel"
@@ -148,6 +154,7 @@
         app:layout_constraintHorizontal_bias="0.325"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/buttonReg"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="HardcodedText" />
 
 </android.support.constraint.ConstraintLayout>
