--- a/app/src/main/res/layout/content_user_view.xml
+++ b/app/src/main/res/layout/content_user_view.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.team38.ShelterDetailView"
-    tools:showIn="@layout/activity_shelter_detail_view">
+    tools:context="com.example.team38.UserView"
+    tools:showIn="@layout/activity_user_view"
+    tools:keep="@layout/content_user_view">
 
     <TextView
-        android:id="@+id/ShelterInfoBox"
+        android:id="@+id/UserInfoBox"
         android:layout_width="334dp"
         android:layout_height="361dp"
         android:layout_marginBottom="8dp"
