--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,4 +94,29 @@
         app:layout_constraintVertical_bias="0.582"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/RecoveryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Recover Email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/PW"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="269dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="8dp"
+        android:text="Fill in the username field and then press this to receive an email with your password"
+        app:layout_constraintBottom_toTopOf="@+id/RecoveryButton"
+        app:layout_constraintEnd_toEndOf="@+id/RecoveryButton"
+        app:layout_constraintStart_toStartOf="@+id/RecoveryButton" />
+
 </android.support.constraint.ConstraintLayout>
