--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#2196f3</color>
     <color name="colorPrimaryDark">#0069c0</color>
     <color name="colorAccent">#6ec6ff</color>
+    <color name="primary_material_light">#2196f3</color>
+    <color name="primary_dark_material_light">#0069c0</color>
+    <color name="accent_material_light">#6ec6ff</color>
 </resources>
