--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="160dp"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.762"
+        app:layout_constraintHorizontal_bias="0.632"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +30,7 @@
         android:text="Name"
         app:layout_constraintBottom_toBottomOf="@+id/regname"
         app:layout_constraintEnd_toStartOf="@+id/regname"
-        app:layout_constraintHorizontal_bias="0.903"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/regname"
         app:layout_constraintVertical_bias="1.0"
@@ -48,25 +48,26 @@
         android:text="Username"
         app:layout_constraintBottom_toBottomOf="@+id/regID"
         app:layout_constraintEnd_toStartOf="@+id/regID"
-        app:layout_constraintHorizontal_bias="0.647"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toTopOf="@+id/regID"
-        app:layout_constraintVertical_bias="0.636"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/regID"
-        android:layout_width="232dp"
-        android:layout_height="45dp"
+        android:layout_width="229dp"
+        android:layout_height="43dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/regPassword"
         app:layout_constraintEnd_toEndOf="@+id/regname"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="@+id/regname"
         app:layout_constraintTop_toBottomOf="@+id/regname"
-        app:layout_constraintVertical_bias="0.576" />
+        app:layout_constraintVertical_bias="0.463" />
 
     <TextView
         android:id="@+id/password"
@@ -83,25 +84,25 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toTopOf="@+id/regPassword"
-        app:layout_constraintVertical_bias="0.818"
+        app:layout_constraintVertical_bias="0.7"
         tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/regPassword"
         android:layout_width="229dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="100dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/regname"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/regname"
         app:layout_constraintTop_toBottomOf="@+id/regname" />
 
     <Spinner
         android:id="@+id/AccountSpinner"
         android:layout_width="229dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
         app:layout_constraintEnd_toEndOf="@+id/regname"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/regname"
@@ -109,19 +110,18 @@
 
     <TextView
         android:id="@+id/accountType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="66dp"
+        android:layout_height="19dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="User Type"
         app:layout_constraintBottom_toBottomOf="@+id/AccountSpinner"
         app:layout_constraintEnd_toStartOf="@+id/AccountSpinner"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toTopOf="@+id/AccountSpinner"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.272"
         tools:ignore="HardcodedText" />
 
     <Button
@@ -181,10 +181,11 @@
         android:layout_width="229dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/regname"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/regname"
         app:layout_constraintTop_toBottomOf="@+id/AccountSpinner" />
 
@@ -198,6 +199,7 @@
         android:text="Email"
         app:layout_constraintBottom_toBottomOf="@+id/emailInput"
         app:layout_constraintEnd_toStartOf="@+id/emailInput"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/emailInput" />
 
