--- a/app/src/main/res/layout/activity_user_view.xml
+++ b/app/src/main/res/layout/activity_user_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,16 +8,29 @@
     android:layout_height="match_parent"
     tools:context="com.example.team38.UserView">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <TextView
         android:id="@+id/UserInfoBox"
         android:layout_width="333dp"
         android:layout_height="302dp"
-        android:layout_marginTop="32dp"
+        android:layout_margin="12dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="88dp"
         android:text="TextView"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.203"
         tools:ignore="HardcodedText" />
 
     <Button
@@ -24,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onLeaveShelterButtonClicked"
         android:text="Leave Shelter"
         app:layout_constraintBottom_toBottomOf="parent"
