--- a/app/src/main/res/layout/content_shelter_detail_view.xml
+++ b/app/src/main/res/layout/content_shelter_detail_view.xml
@@ -19,8 +19,10 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
+
 </android.support.constraint.ConstraintLayout>
