--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,5 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/background_material_light</item>
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+    </style>
+
+    <style name="Appcompat_withaction" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@android:color/background_light</item>
     </style>
 </resources>
